vbslite_trans/lesson1/tools/mvbs-idl/resources/gen/IDL_GrammarParser.py
# Generated from IDL_Grammar.g4 by ANTLR 4.13.0
# antlr4 (v4.13.0)
# 	- Project: https://github.com/antlr/antlr4
# 	- License: BSD
# 	- Copyright (c) 2012-2022 The ANTLR Project


# This project incorporates code fragments similar to:
# PeopleCodeParser (v1.1.6)
# 	- Project: https://github.com/lbaca/PeopleCodeParser
# 	- License: MIT
# 	- Copyright: (c) 2018 Leandro Baca


# Full license texts:
# - BSD License: See LICENSE-ANTLR
# - MIT License: See LICENSE-MIT

from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IDL_GrammarParser ( Parser ):

    grammarFileName = "IDL_Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "';'", "':'", "','", "'{'", "'}'", "'('", "')'", "'['", 
                     "']'", "'<'", "'>'", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'|'", "'^'", "'&'", "'<<'", "'>>'", "'~'", 
                     "'::'", "'@'", "'in'", "'out'", "'inout'", "'interface'", 
                     "'typedef'", "'void'", "'default'", "'module'", "'@annotation'", 
                     "'ifndef'", "'switch'", "'case'", "'sequence'", "'struct'", 
                     "'enum'", "'const'", "'string'", "'union'", "'char'", 
                     "'int8'", "'int16'", "'int32'", "'int64'", "'long'", 
                     "'octet'", "'short'", "'uint8'", "'uint16'", "'uint32'", 
                     "'uint64'", "'unsigned'", "'double'", "'float'", "'boolean'", 
                     "'wchar'" ]

    symbolicNames = [ "<INVALID>", "INTEGER_LITERAL", "OCTAL_LITERAL", "HEX_LITERAL", 
                      "FLOATING_PT_LITERAL", "STRING_LITERAL", "CHARACTER_LITERAL", 
                      "BOOLEAN_LITERAL", "SEMICOLON", "COLON", "COMMA", 
                      "LEFT_BRACE", "RIGHT_BRACE", "LEFT_BRACKET", "RIGHT_BRACKET", 
                      "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", "LEFT_ANG_BRACKET", 
                      "RIGHT_ANG_BRACKET", "EQUAL", "PLUS", "MINUS", "MULT", 
                      "DIV", "MOD", "BITWISE_OR", "BITWISE_XOR", "BITWISE_AND", 
                      "SHIFT_LEFT", "SHIFT_RIGHT", "BITWISE_NOT", "DOUBLE_COLON", 
                      "AT", "KW_IN", "KW_OUT", "KW_INOUT", "KW_INTERFACE", 
                      "KW_TYPEDEF", "KW_VOID", "KW_DEFAULT", "KW_MODULE", 
                      "KW_AT_ANNOTATION", "KW_IFNDEF", "KW_SWITCH", "KW_CASE", 
                      "KW_SEQUENCE", "KW_STRUCT", "KW_ENUM", "KW_CONST", 
                      "KW_STRING", "KW_UNION", "CHAR_TYPE", "INT8_TYPE", 
                      "INT16_TYPE", "INT32_TYPE", "INT64_TYPE", "LONG_TYPE", 
                      "OCTET_TYPE", "SHORT_TYPE", "UINT8_TYPE", "UINT16_TYPE", 
                      "UINT32_TYPE", "UINT64_TYPE", "UNSIGNED_TYPE", "DOUBLE_TYPE", 
                      "FLOAT_TYPE", "KW_BOOLEAN", "WCHAR_TYPE", "ID", "LETTER", 
                      "ID_DIGIT", "WS", "PREPROC_DIRECTIVE", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_specification = 0
    RULE_definition = 1
    RULE_module_dcl = 2
    RULE_module_contents = 3
    RULE_module_content = 4
    RULE_interface_dcl = 5
    RULE_interface_forward_dcl = 6
    RULE_interface_def = 7
    RULE_interface_header = 8
    RULE_interface_kind = 9
    RULE_interface_inheritance_spec = 10
    RULE_interface_body = 11
    RULE_export_dcl = 12
    RULE_interface_name = 13
    RULE_scoped_name = 14
    RULE_annotated_scoped_name = 15
    RULE_initialization_parameter_declaration = 16
    RULE_const_dcl = 17
    RULE_const_type = 18
    RULE_const_expr = 19
    RULE_or_expr = 20
    RULE_xor_expr = 21
    RULE_and_expr = 22
    RULE_shift_expr = 23
    RULE_add_expr = 24
    RULE_mult_expr = 25
    RULE_unary_expr = 26
    RULE_primary_expr = 27
    RULE_unary_operator = 28
    RULE_literal = 29
    RULE_type_dcl = 30
    RULE_typedef_dcl = 31
    RULE_constr_type_dcl = 32
    RULE_type_declarator = 33
    RULE_type_spec = 34
    RULE_simple_type_spec = 35
    RULE_base_type_spec = 36
    RULE_template_type_spec = 37
    RULE_declarators = 38
    RULE_declarator = 39
    RULE_simple_declarator = 40
    RULE_complex_declarator = 41
    RULE_floating_pt_type = 42
    RULE_float_type = 43
    RULE_double_type = 44
    RULE_long_double_type = 45
    RULE_integer_type = 46
    RULE_signed_int = 47
    RULE_signed_octet_int = 48
    RULE_signed_short_int = 49
    RULE_signed_long_int = 50
    RULE_signed_longlong_int = 51
    RULE_unsigned_int = 52
    RULE_unsigned_octet_int = 53
    RULE_unsigned_short_int = 54
    RULE_unsigned_long_int = 55
    RULE_unsigned_longlong_int = 56
    RULE_char_type = 57
    RULE_wide_char_type = 58
    RULE_boolean_type = 59
    RULE_octet_type = 60
    RULE_annotation = 61
    RULE_annotation_appl = 62
    RULE_annotation_appl_params = 63
    RULE_annotation_appl_param = 64
    RULE_struct_dcl = 65
    RULE_struct_def = 66
    RULE_struct_forward_dcl = 67
    RULE_member_list = 68
    RULE_member = 69
    RULE_union_dcl = 70
    RULE_union_def = 71
    RULE_union_forward_dcl = 72
    RULE_switch_type_spec = 73
    RULE_switch_body = 74
    RULE_case = 75
    RULE_case_label = 76
    RULE_element_spec = 77
    RULE_enum_dcl = 78
    RULE_enumerator_list = 79
    RULE_enumerator = 80
    RULE_string_type = 81
    RULE_positive_int_const = 82
    RULE_sequence_type = 83
    RULE_array_declarator = 84
    RULE_fixed_array_size = 85
    RULE_op_dcl = 86
    RULE_operation_type_spec = 87
    RULE_parameter_dcls = 88
    RULE_param_dcl = 89
    RULE_param_attribute = 90
    RULE_identifier = 91

    ruleNames =  [ "specification", "definition", "module_dcl", "module_contents", 
                   "module_content", "interface_dcl", "interface_forward_dcl", 
                   "interface_def", "interface_header", "interface_kind", 
                   "interface_inheritance_spec", "interface_body", "export_dcl", 
                   "interface_name", "scoped_name", "annotated_scoped_name", 
                   "initialization_parameter_declaration", "const_dcl", 
                   "const_type", "const_expr", "or_expr", "xor_expr", "and_expr", 
                   "shift_expr", "add_expr", "mult_expr", "unary_expr", 
                   "primary_expr", "unary_operator", "literal", "type_dcl", 
                   "typedef_dcl", "constr_type_dcl", "type_declarator", 
                   "type_spec", "simple_type_spec", "base_type_spec", "template_type_spec", 
                   "declarators", "declarator", "simple_declarator", "complex_declarator", 
                   "floating_pt_type", "float_type", "double_type", "long_double_type", 
                   "integer_type", "signed_int", "signed_octet_int", "signed_short_int", 
                   "signed_long_int", "signed_longlong_int", "unsigned_int", 
                   "unsigned_octet_int", "unsigned_short_int", "unsigned_long_int", 
                   "unsigned_longlong_int", "char_type", "wide_char_type", 
                   "boolean_type", "octet_type", "annotation", "annotation_appl", 
                   "annotation_appl_params", "annotation_appl_param", "struct_dcl", 
                   "struct_def", "struct_forward_dcl", "member_list", "member", 
                   "union_dcl", "union_def", "union_forward_dcl", "switch_type_spec", 
                   "switch_body", "case", "case_label", "element_spec", 
                   "enum_dcl", "enumerator_list", "enumerator", "string_type", 
                   "positive_int_const", "sequence_type", "array_declarator", 
                   "fixed_array_size", "op_dcl", "operation_type_spec", 
                   "parameter_dcls", "param_dcl", "param_attribute", "identifier" ]

    EOF = Token.EOF
    INTEGER_LITERAL=1
    OCTAL_LITERAL=2
    HEX_LITERAL=3
    FLOATING_PT_LITERAL=4
    STRING_LITERAL=5
    CHARACTER_LITERAL=6
    BOOLEAN_LITERAL=7
    SEMICOLON=8
    COLON=9
    COMMA=10
    LEFT_BRACE=11
    RIGHT_BRACE=12
    LEFT_BRACKET=13
    RIGHT_BRACKET=14
    LEFT_SQUARE_BRACKET=15
    RIGHT_SQUARE_BRACKET=16
    LEFT_ANG_BRACKET=17
    RIGHT_ANG_BRACKET=18
    EQUAL=19
    PLUS=20
    MINUS=21
    MULT=22
    DIV=23
    MOD=24
    BITWISE_OR=25
    BITWISE_XOR=26
    BITWISE_AND=27
    SHIFT_LEFT=28
    SHIFT_RIGHT=29
    BITWISE_NOT=30
    DOUBLE_COLON=31
    AT=32
    KW_IN=33
    KW_OUT=34
    KW_INOUT=35
    KW_INTERFACE=36
    KW_TYPEDEF=37
    KW_VOID=38
    KW_DEFAULT=39
    KW_MODULE=40
    KW_AT_ANNOTATION=41
    KW_IFNDEF=42
    KW_SWITCH=43
    KW_CASE=44
    KW_SEQUENCE=45
    KW_STRUCT=46
    KW_ENUM=47
    KW_CONST=48
    KW_STRING=49
    KW_UNION=50
    CHAR_TYPE=51
    INT8_TYPE=52
    INT16_TYPE=53
    INT32_TYPE=54
    INT64_TYPE=55
    LONG_TYPE=56
    OCTET_TYPE=57
    SHORT_TYPE=58
    UINT8_TYPE=59
    UINT16_TYPE=60
    UINT32_TYPE=61
    UINT64_TYPE=62
    UNSIGNED_TYPE=63
    DOUBLE_TYPE=64
    FLOAT_TYPE=65
    KW_BOOLEAN=66
    WCHAR_TYPE=67
    ID=68
    LETTER=69
    ID_DIGIT=70
    WS=71
    PREPROC_DIRECTIVE=72
    COMMENT=73
    LINE_COMMENT=74

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IDL_GrammarParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(IDL_GrammarParser.DefinitionContext,i)


        def getRuleIndex(self):
            return IDL_GrammarParser.RULE_specification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecification" ):
                listener.enterSpecification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecification" ):
                listener.exitSpecification(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpecification" ):
                return visitor.visitSpecification(self)
            else:
                return visitor.visitChildren(self)




    def specification(self):

        localctx = IDL_GrammarParser.SpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_specification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 184
                self.definition()
                self.state = 187 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((((_la - 9)) & ~0x3f) == 0 and ((1 << (_la - 9)) & 576463915957878785) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def annotation(self):
            return self.getTypedRuleContext(IDL_GrammarParser.AnnotationContext,0)


        def module_dcl(self):
            return self.getTypedRuleContext(IDL_GrammarParser.Module_dclContext,0)


        def SEMICOLON(self):
            return self.getToken(IDL_GrammarParser.SEMICOLON, 0)

        def const_dcl(self):
            return self.getTypedRuleContext(IDL_GrammarParser.Const_dclContext,0)


        def type_dcl(self):
            return self.getTypedRuleContext(IDL_GrammarParser.Type_dclContext,0)


        def interface_dcl(self):
            return self.getTypedRuleContext(IDL_GrammarParser.Interface_dclContext,0)


        def getRuleIndex(self):
            return IDL_GrammarParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = IDL_GrammarParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.annotation()
            self.state = 202
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40]:
                self.state = 190
                self.module_dcl()
                self.state = 191
                self.match(IDL_GrammarParser.SEMICOLON)
                pass
            elif token in [48]:
                self.state = 193
                self.const_dcl()
                self.state = 194
                self.match(IDL_GrammarParser.SEMICOLON)
                pass
            elif token in [32, 37, 46, 47, 50, 68]:
                self.state = 196
                self.type_dcl()
                self.state = 197
                self.match(IDL_GrammarParser.SEMICOLON)
                pass
            elif token in [9, 36]:
                self.state = 199
                self.interface_dcl()
                self.state = 200
                self.match(IDL_GrammarParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_dclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_MODULE(self):
            return self.getToken(IDL_GrammarParser.KW_MODULE, 0)

        def identifier(self):
            return self.getTypedRuleContext(IDL_GrammarParser.IdentifierContext,0)


        def LEFT_BRACE(self):
            return self.getToken(IDL_GrammarParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(IDL_GrammarParser.RIGHT_BRACE, 0)

        def module_contents(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IDL_GrammarParser.Module_contentsContext)
            else:
                return self.getTypedRuleContext(IDL_GrammarParser.Module_contentsContext,i)


        def getRuleIndex(self):
            return IDL_GrammarParser.RULE_module_dcl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_dcl" ):
                listener.enterModule_dcl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_dcl" ):
                listener.exitModule_dcl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_dcl" ):
                return visitor.visitModule_dcl(self)
            else:
                return visitor.visitChildren(self)




    def module_dcl(self):

        localctx = IDL_GrammarParser.Module_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_module_dcl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 204
            self.match(IDL_GrammarParser.KW_MODULE)
            self.state = 205
            self.identifier()
            self.state = 206
            self.match(IDL_GrammarParser.LEFT_BRACE)
            self.state = 208 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 207
                self.module_contents()
                self.state = 210 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((((_la - 9)) & ~0x3f) == 0 and ((1 << (_la - 9)) & 576463915957878785) != 0)):
                    break

            self.state = 212
            self.match(IDL_GrammarParser.RIGHT_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_contentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module_content(self):
            return self.getTypedRuleContext(IDL_GrammarParser.Module_contentContext,0)


        def SEMICOLON(self):
            return self.getToken(IDL_GrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return IDL_GrammarParser.RULE_module_contents

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_contents" ):
                listener.enterModule_contents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_contents" ):
                listener.exitModule_contents(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_contents" ):
                return visitor.visitModule_contents(self)
            else:
                return visitor.visitChildren(self)




    def module_contents(self):

        localctx = IDL_GrammarParser.Module_contentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_module_contents)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 214
            self.module_content()
            self.state = 215
            self.match(IDL_GrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def annotation(self):
            return self.getTypedRuleContext(IDL_GrammarParser.AnnotationContext,0)


        def type_dcl(self):
            return self.getTypedRuleContext(IDL_GrammarParser.Type_dclContext,0)


        def module_dcl(self):
            return self.getTypedRuleContext(IDL_GrammarParser.Module_dclContext,0)


        def const_dcl(self):
            return self.getTypedRuleContext(IDL_GrammarParser.Const_dclContext,0)


        def interface_dcl(self):
            return self.getTypedRuleContext(IDL_GrammarParser.Interface_dclContext,0)


        def getRuleIndex(self):
            return IDL_GrammarParser.RULE_module_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_content" ):
                listener.enterModule_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_content" ):
                listener.exitModule_content(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_content" ):
                return visitor.visitModule_content(self)
            else:
                return visitor.visitChildren(self)




    def module_content(self):

        localctx = IDL_GrammarParser.Module_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_module_content)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 217
            self.annotation()
            self.state = 222
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32, 37, 46, 47, 50, 68]:
                self.state = 218
                self.type_dcl()
                pass
            elif token in [40]:
                self.state = 219
                self.module_dcl()
                pass
            elif token in [48]:
                self.state = 220
                self.const_dcl()
                pass
            elif token in [9, 36]:
                self.state = 221
                self.interface_dcl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Interface_dclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interface_def(self):
            return self.getTypedRuleContext(IDL_GrammarParser.Interface_defContext,0)


        def interface_forward_dcl(self):
            return self.getTypedRuleContext(IDL_GrammarParser.Interface_forward_dclContext,0)


        def getRuleIndex(self):
            return IDL_GrammarParser.RULE_interface_dcl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterface_dcl" ):
                listener.enterInterface_dcl(self)
